--- a/RevisionesApp/app/src/main/res/values/strings.xml
+++ b/RevisionesApp/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Inicio</string>
     <string name="title_equipos">Equipos</string>
     <string name="title_incidencias">Incidencias</string>
+    <string name="title_albaranes">Albaranes</string>
+    <string name="title_espacios">Espacios</string>
+    <string name="title_usuario">Usuario</string>
+    <string name="title_notificaciones">Notificaciones</string>
 </resources>
