--- a/RevisionesApp/app/src/main/res/values/strings.xml
+++ b/RevisionesApp/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_espacios">Espacios</string>
     <string name="title_usuario">Usuario</string>
     <string name="title_notificaciones">Notificaciones</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
