--- a/RevisionesApp/app/src/main/res/values/strings.xml
+++ b/RevisionesApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="title_notificaciones">Notificaciones</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_back">Atrás</string>
+    <string name="title_editar">Editar</string>
+    <string name="title_save">Guardar</string>
 </resources>
